--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,9 @@ ul li{
 .mb20{
     margin-bottom: 20px;
 }
+.active{
+    background-color: #fff;
+}
 label{
     font: 400 14px/20px sans-serif;
     color: #787887;
@@ -56,12 +59,10 @@ input[type=date]::-webkit-datetime-edit-month-field ,
 }
 h1{
     font: 500 44px/42px 'Roboto', sans-serif;
-    color: #fff;
 }
   
 h2{
     font: 500 36px/42px 'Roboto', sans-serif;
-    color: #fff;
 }  
 h3{
     font: 500 30px/30px 'Roboto', sans-serif;
@@ -75,7 +76,7 @@ h5{
 h6{
     font: 500 16px/16px 'Roboto', sans-serif;
 }
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+::-webkit-input-placeholder { /* Chromra/Safari */
     font: 300 12px sans-serif;
     color: #797474;
 }
@@ -87,12 +88,9 @@ h6{
     font: 400 14px/24px sans-serif;
     cursor: pointer;
 }
-.section-header .wrap{
+header .wrap{
     width: 1200px;
     margin: 0 auto;
-}
-header{
-    width: 100%;
     display: flex;
     justify-content: space-between;   
 }
@@ -110,7 +108,7 @@ header .logo{
 }
 
 .nav-login{
-    padding: 15px;
+    padding: 26px 0px;
     margin-right: 10px;
 }
 .nav-login a{
@@ -126,11 +124,6 @@ header .logo{
     color: #14bef0 !important;
 }
 
-.section-one .wrap{
-    width: 900px;
-    margin: 0 auto;
-}
-
 .side-pannel{
     position: fixed;
     top: 0;
@@ -138,57 +131,79 @@ header .logo{
     right: 0;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.7);
-    z-index: 1;
+    z-index: 2;
 }
-.side-pannel-body{
+.side-pannel .side-pannel-body{
     position: absolute;
     top: 0;
     bottom: 0;
-    left: 0;
+    left: -380px;
     right: 0;
     width: 15%;
     background: #fff;
     padding: 0px 90px;
+    -webkit-transition: all 7s ease;
+    transition: all 0.7s ease;
 }
-
 .side-pannel-body ul{
+    display: block;
+}
+.side-pannel-body ul li{
+
     display: flex;
     margin-bottom: 25px;
 }
 .side-pannel-body ul i,img{
     margin-right: 15px;
 }
-
-/* header search-bar  */
-header .search-input-area{
-    padding: 10px 0px 0px 90px;
+.side-pannel .open-side-navbar{
+    left: 0;
 }
-header .search-input-area input{
-    height: 40px;
+
+
+.search-location,
+.search-info{
+    position: relative;
+}
+.search-location input,
+.search-info input{
+    height: 50px;
     border: 1px solid #cccccc;
-    border-radius: 3px;
     box-shadow: 0 2px 4px 0 #cecccc;
     padding-left: 10px;
-    font: 300 15px/20px Roboto; 
+    font: 300 15px/20px Roboto;
+    cursor: pointer;
 }
-header .search-input-area :nth-child(2){
-    width: 220px;
+.search-location input{
+    width: 280px;
 }
-header .search-input-area :nth-child(3){
-    width: 350px;
+.search-info input{
+    width: 410px;
+    padding-left: 30px;
 }
-header .search-input-area span i{
-    position: relative;
-    top: 0px;
-    left: 275px;
+/* 
+.suggation-tab::-webkit-scrollbar{
+    width: 12px;
+    color: #333333;
+}
+ */
+/* header search-bar  */
+header .search-area{
+    padding: 10px 0px 0px 60px;
+}
+
+header .search-info span i{
+    position: absolute;
+    top: 20px;
+    left: 10px;
     color: #cccccc;
     font-size: 16px;
 }
 header .suggation-tab{
     position: absolute;
     top: 55px;
-    left: 669px; 
-    width: 382px;
+    left: 0px; 
+    width: 442px;
     background-color: #dddcdc;
     border-radius: 3px;
     box-sizing: border-box;
@@ -213,8 +228,8 @@ header .suggation-tab ul li a{
 header .location-tab{
     position: absolute;
     top: 55px;
-    left: 433px;
-    width: 233px;
+    left: 0px;
+    width: 292px;
     background-color: #dddcdc;
     border-radius: 3px;
     box-sizing: border-box;
@@ -236,12 +251,12 @@ header .location-tab ul li:last-child{
     border-bottom: 0px;
 }
 header .detect-location-tab{
-    position: relative;
-    top: -35px;
-    left: 283px;
+    position: absolute;
+    top: 13px;
+    left: 220px;
     background-color: #cecccc;
     border-radius: 3px;
-    padding: 3px 5px 2px;
+    padding: 5px 8px 5px;
     width: 51px;
 }
 .detect-location-tab img{
@@ -257,41 +272,27 @@ header .detect-location-tab:hover{
 /* end */
 
 /* N search-bar */
-.search-input-area{
-    padding: 150px 128px 0px;
+.search-area form{
+    display: flex;
 }
-.search-input-area input{
-    height: 40px;
-    border: 1px solid #cccccc;
-    border-radius: 3px;
-    box-shadow: 0 2px 4px 0 #cecccc;
-    padding-left: 10px;
-    font: 300 15px/20px Roboto;
-    cursor: pointer;
-}
-.search-input-area :nth-child(2){
-    width: 220px;
-}
-.search-input-area :nth-child(3){
-    padding-left: 30px;
-    width: 320px;
-}
-.search-input-area span i{
-    position: relative;
-    top: 1px;
-    left: 275px;
+.search-info span i{
+    position: absolute;
+    top: 18px;
+    left: 10px;
     color: #cccccc;
     font-size: 16px;
 }
 .suggation-tab{
-    position: relative;
-    top: -22px;
-    left: 392px; 
-    width: 352px;
+    position: absolute;
+    top: 55px;
+    left: 0px; 
+    width: 442px;
+    max-height: 300px;
     background-color: #dddcdc;
     border-radius: 3px;
     box-sizing: border-box;
     z-index: 1;
+    overflow: scroll;
 }
 .suggation-tab ul li{
     border-bottom: 1px dotted #333333;
@@ -310,14 +311,16 @@ header .detect-location-tab:hover{
 }
 
 .location-tab{
-    position: relative;
-    top: -22px;
-    left: 155px; 
-    width: 233px;
+    position: absolute;
+    top: 55px;
+    left: 0px; 
+    width: 292px;
+    max-height: 300px;
     background-color: #dddcdc;
     border-radius: 3px;
     box-sizing: border-box;
     z-index: 1;
+    overflow: scroll;
 }
 .location-tab ul li{
     border-bottom: 1px dotted #333333;
@@ -335,14 +338,15 @@ header .detect-location-tab:hover{
     border-bottom: 0px;
 }
 .detect-location-tab{
+    position: absolute;
     display: flex;
-    position: relative;
-    top: -35px;
-    left: 320px;
+    top: 13px;
+    left: 219px;
     background-color: #cecccc;
     border-radius: 3px;
-    padding: 3px 5px 2px;
+    padding: 5px 8px 5px;
     width: 51px;
+    z-index: 1;
 }
 .detect-location-tab img{
     margin-right: 5px;
@@ -357,6 +361,29 @@ header .detect-location-tab:hover{
 /* N search-bar */
 
 
+.search-box .wrap{
+    width: 900px;
+    margin: 0 auto;
+}
+.search-box .intro h1{
+    font: 600 40px/40px sans-serif;
+    color: #3a3a3a;
+    text-align: center;
+}
+.search-box .intro{
+    margin-bottom: 50px;
+    padding-top: 40px;
+}
+.search-box .search-title h5{
+    text-align: center;
+}
+.search-box .search-area{
+    padding: 0px 75px;
+}
+
+.popular-search-list{
+    position: relative;
+}
 .visible-list{
     margin-bottom: 80px;
 }
@@ -378,8 +405,8 @@ header .detect-location-tab:hover{
     width: 750px;
     display: flex;        
     position: absolute;
-    top: 303px;
-    left: 300px;
+    top: 33px;
+    left: 45px;
     border: 1px solid #b4b7cd;
     background-color: #d8d8d8;
     z-index: 1;
@@ -393,6 +420,13 @@ header .detect-location-tab:hover{
 .is-hidden{
     display: none;
 }
+.arrow-down{
+    transition: all 0.5s ease;
+}
+.rotate-me{
+    transform: rotateX(180deg);
+    color: #14bef0;
+}
 
 /* login start */
 .login-popup{
@@ -402,7 +436,7 @@ header .detect-location-tab:hover{
     background-color: rgba(0, 0, 0, 0.7);
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 10;
 }
 .popup-body{
     width: 400px;
@@ -580,6 +614,7 @@ header .detect-location-tab:hover{
 .service-tab a i{
     font-size: 30px;
     padding: 10px 50px;
+    transition: all 1s ease-in-out;
 }
 .service-tab a p{
     padding: 0px;
@@ -587,6 +622,9 @@ header .detect-location-tab:hover{
 }
 .service-tab a:hover :not(:first-child){
     color: #042b9f;
+}
+.service-tab a:hover i{
+    transform: scale(1.3);
 }
 
 /*  nutritionist-list */
@@ -629,7 +667,8 @@ header .detect-location-tab:hover{
 .nutritionist-container .nutritionist-head:hover{
     text-decoration: underline;
 }
-.nutritionist-container .experience{
+.nutritionist-container .experience,
+.nutritionist-container .degree{
     font: 400 14px/14px sans-serif;
 }
 
@@ -684,8 +723,6 @@ header .detect-location-tab:hover{
     padding: 10px;
     color: #414146;
 }
-.nutritionist-profile .section{
-}
 .nutritionist-container .about{
     font: 400 14px/18px sans-serif;
     color: #414146;
@@ -709,7 +746,13 @@ header .detect-location-tab:hover{
 .sub-section-two{
     width: 950px;
     background-color: #fff;
-    padding: 10px;
+    padding: 20px;
+}
+.sub-section-two.info p{
+    font: 
+}
+.sub-section-two.info p i{
+    margin-right: 10px;
 }
 /* nutritionist-details-profile End*/
 
@@ -815,3 +858,26 @@ header .detect-location-tab:hover{
     border-bottom: none;
 }
 /* User Dashboard Profile  end*/
+
+/* Loader */
+.loader{
+    height: 50px;
+    width: 50px;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    margin-top: -30px;
+    margin-left: -30px;
+    border-radius: 50%;
+    border: 5px solid #ffffff;
+    border-top-color: cyan;
+    animation: spin 1s cubic-bezier(0.65, 0.07, 0, 0.64) infinite;
+  }
+  
+  @keyframes spin{
+    to{
+      transform: rotate(360deg); 
+    }
+  }
+  
+/* Loader End*/
